--- a/css/main.css
+++ b/css/main.css
@@ -42,3 +42,42 @@ body {
     font-size: 24px;
     color: rgba(255, 255, 255, 0.8);
 }
+
+.forms {
+    margin: 45px 25px 45px 25px;
+    border-radius: 15px;
+    padding: 15px 25px;
+    color: #fff;
+}
+
+.forms p, .forms input {
+    margin-top: 15px;
+    width: 100%;
+    font-size: 18px;
+}
+
+.events {
+    margin: 75px 25px 75px 25px;
+    border-radius: 15px;
+    color: #fff;
+}
+
+.event {
+    margin: 15px 10px;
+}
+
+.eventHead {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.title {
+    margin-bottom: 5px;
+    font-size: 28px;
+}
+
+.text {
+    margin-left: 15px;
+    font-size: 16px;
+}
